# s3k-rocq-verif

./: .gitignore  LICENSE  Makefile  README.md  _RocqProject  rocq-s3k-barocq-comp.opam  rocq-s3k-barocq.opam  rocq-s3k-exec-sem.opam  rocq-s3k-verif.opam
.github/workflows/: docker-action.yml
contrib/barocq/rocqgen/: ShallowNotations.v
src/: config.br  error.br  exception.br  ipc.br  kernel.br  machine.br  mon.br  proc.br  syscall.br  tsl.br  types.br
src/platform/: cheshire.br  cheshire2.br  qemu_virt.br
theories/Barocq/: Make  Makefile  S3K_ShallowR.v
theories/BarocqComp/: Make
theories/BarocqComp/common/: Barray.v  ExtOrdered.v  Ident.v  Intop.v  Option.v  Res.v  StateMonads.v  Utils.v  ZlistPlus.v
theories/BarocqComp/rocqgen/: ShallowNotations.v
theories/ExecSem/: Make  cap.v  core_cap.v  core_err.v  core_kernel.v  core_mon.v  core_proc.v  core_tsl.v  ctx.v  exec.v  exec_kernel.v  exec_mon.v  exec_sched.v  kstate.v  proc.v  sched.v  util.v
theories/S3K/ExecSem/: test.v
theories/Verif/: Make  aux.v  inv.v  refine.v  repr.v  tactics.v  test.v
