opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/kth-step/s3k-rocq-verif"
dev-repo: "git+https://github.com/kth-step/s3k-rocq-verif.git"
bug-reports: "https://github.com/kth-step/s3k-rocq-verif/issues"
license: "LGPL-3.0-only"

synopsis: "Barocq support library for S3K"
description: """
Library with support files for embeddings of S3K Barocq code in Rocq.
"""

build: [make "-C" "theories/BarocqComp" "-j%{jobs}%"]
install: [make "-C" "theories/BarocqComp" "install"]
depends: [
  "rocq-core" {>= "9.0" & < "9.3"}
  "rocq-stdlib"
  "coq-vst-zlist" {= "2.13"}
  "compcert-ce" {= "3.17-20260508ce"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:Barocq"
  "logpath:S3K.BarocqComp"
]
authors: [
  "Clément Chavanon"
  "Frédéric Besson"
]

pin-depends: ["compcert-ce.3.17-20260508ce" "git+https://gitlab.inria.fr/cchavano/compcert-ce.git#barocq-v0.5"]
