opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/kth-step/s3k-rocq-verif"
dev-repo: "git+https://github.com/kth-step/s3k-rocq-verif.git"
bug-reports: "https://github.com/kth-step/s3k-rocq-verif/issues"
license: "BSD-3-Clause"

synopsis: "Rocq embedding of Barocq implementation of S3K"
description: """
S3K is an experimental bare-metal capability-based separation kernel for RISC-V.
This package contains an embedding in Rocq of a Barocq implementation of S3K.
"""

build: [make "-C" "theories/Barocq" "-j%{jobs}%"]
install: [make "-C" "theories/Barocq" "install"]
depends: [
  "rocq-core" {>= "9.0" & < "9.3"}
  "rocq-stdlib"
  "coq-record-update" {= "0.3.6"}
  "rocq-s3k-barocq-comp" {= "dev"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:S3K"
  "keyword:Barocq"
  "logpath:S3K.Barocq"
]
authors: [
  "Hanwen Gu"
]
