opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/kth-step/s3k-rocq-verif"
dev-repo: "git+https://github.com/kth-step/s3k-rocq-verif.git"
bug-reports: "https://github.com/kth-step/s3k-rocq-verif/issues"
license: "BSD-3-Clause"

synopsis: "Verification in Rocq of Barocq implementation of S3K"
description: """
S3K is an experimental bare-metal capability-based separation kernel for RISC-V.
This package is about verification in Rocq of a Barocq implementation of S3K.
"""

build: [make "-C" "theories/Verif" "-j%{jobs}%"]
install: [make "-C" "theories/Verif" "install"]
depends: [
  "rocq-core" {>= "9.0" & < "9.3"}
  "rocq-stdlib"
  "coq-vst-zlist" {= "2.13"}
  "rocq-s3k-barocq-comp" {= "dev"}
  "rocq-s3k-barocq" {= "dev"}
  "rocq-s3k-exec-sem" {= "dev"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:S3K"
  "keyword:Barocq"
  "logpath:S3K.Verif"
]
authors: [
  "Hanwen Gu"
]
